# catbot-agent

./: .env.example  Cargo.toml  README.md
common/: Cargo.toml
common/src/: lib.rs  predictions.rs  prices.rs  subscriptions.rs  worker_binding.rs  worker_kv.rs
common/src/analysis/: m4rs.rs  mod.rs  rsi.rs
common/src/sources/: binance.rs  cooker.rs  jup.rs  mod.rs
common/src/transforms/: csv.rs  mod.rs  numbers.rs
consumer/: Cargo.toml
consumer/src/: lib.rs  main.rs
cooker/: .gitignore  Cargo.toml  README.md  wrangler.toml
cooker/src/: lib.rs
cooker/src/predictions/: binance.rs  mod.rs  predict.rs  prediction_types.rs
cooker/src/providers/: actors.rs  cleaner.rs  core.rs  gemini.rs  instructions.rs  mod.rs  prompter.rs  schemas.rs
cooker/src/sources/: binance.rs  jup.rs  mod.rs
cooker/src/transforms/: numbers.rs
feeder/: Cargo.toml  README.md  wrangler.toml
feeder/src/: lib.rs
feeder/src/charts/: candle.rs  candle.rs.bak  constants.rs  helpers.rs  image.rs  indicators.rs  labels.rs  mod.rs  painters.rs  png.rs  rsi.rs  signals.rs
json_schema/: Cargo.toml
json_schema/src/: lib.rs
json_schema_derive/: Cargo.toml
json_schema_derive/src/: lib.rs
json_schema_derive/tests/: integration.rs
trader/: Cargo.toml  README.md  wrangler.toml
trader/src/: lib.rs
utils/src/: bar.rs  lib.rs  predictions.rs  prices.rs
