[workspace]
members = [
     "common",
    # "consumer",
    "feeder",
    # "fetcher",
    # "freezer",
    "cooker", 
    # "agent",
    # "executor",
    # "toolings",
    # "mcp",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
strum =  { version ="0.27.1", features = ["derive"] }
dotenvy = "0.15.7"
chrono = "0.4"
chrono-tz = "0.10"
log = "0.4"
env_logger = "0.11"
jup-sdk ={ path = "../jup-sdk-rs" }

[workspace.dev-dependencies]
tokio = { version = "1", features = ["full"] }
