[workspace]
members = [
    "common",
    "feeder",
    "cooker",
    "json_schema_derive",
    "json_schema",
    "trader",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
chrono = "0.4"
chrono-tz = "0.10"
dotenvy = "0.15.7"
env_logger = "0.11"
log = "0.4"
m4rs = "0.12.0"
serde_json = "1.0"

[workspace.dependencies.jup-sdk]
path = "../jup-sdk-rs"

[workspace.dependencies.reqwest]
version = "0.12.12"
features = [
    "json",
    "rustls-tls",
]

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.dependencies.strum]
version = "0.27.1"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1"
features = ["full"]
