[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
strum = { workspace = true }
jup-sdk = { workspace = true }
reqwest.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true }
dotenvy.workspace = true
