[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
strum = { workspace = true }
jup-sdk = { workspace = true }
reqwest.workspace = true
anyhow.workspace = true
m4rs.workspace = true

worker = { version = "0.5.0", features = ['http'], optional = true }
worker-macros = { version = "0.5.0", features = ['http'], optional = true }

[dev-dependencies]
tokio = { workspace = true }
dotenvy.workspace = true

[features]
default = ["service_binding"]
service_binding = ["dep:worker", "dep:worker-macros"]
