[package]
name = "feeder"
version = "0.1.0"
edition = "2021"
authors = [ "katopz <katopz@gmail.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5.0", features=['http'] }
worker-macros = { version="0.5.0", features=['http'] }
console_error_panic_hook = { version = "0.1.1" }
common = { path="../common" }

cfg-if = "1.0.0"
serde_json = "1.0.140"
image = "0.25.5"
imageproc = "0.25.0"
chrono =   "0.4.40"  
plotters = "0.3.7"
bytes = "1.10.0"
ab_glyph = "0.2.29"
serde.workspace = true
chrono-tz.workspace = true
anyhow.workspace = true
rand = "0.9.0"
m4rs = "0.12.0"

[profile.release]
lto = true
strip = true
codegen-units = 1

[dev-dependencies]
tokio = { workspace = true }
